--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -3,34 +3,72 @@
 $maincolor:#282D6F;
 $heartcolor:rgb(211, 52, 78);
 
-p{
-    color: $maincolor;
+p {
+	color: $maincolor;
+	margin: 0;
 }
-label{
-    color: $maincolor;
+
+label {
+	color: $maincolor;
 }
-li{
-    color: $maincolor;
-    list-style: none;
+
+li {
+	color: $maincolor;
+	list-style: none;
 }
-a{
-    color: $maincolor;
-    text-decoration: none;
+
+a {
+	color: $maincolor;
+	text-decoration: none;
 }
-input{
-    border: none;
-    background: none;
+
+input {
+	border: none;
+	background: none;
+
+	&:focus {
+		outline: none;
+	}
 }
-button{
-    border: none;
-    background: none;
+
+textarea {
+	border: none;
+	background: none;
+
+	&:focus {
+		outline: none;
+	}
 }
-i{
-    color: $maincolor;
+
+button {
+	border: none;
+	background: none;
+
+	&:focus {
+		outline: none;
+	}
 }
-.heartIcon{
-    color: $heartcolor;
+
+i {
+	color: $maincolor;
 }
-h2{
-    color: $maincolor;
+
+.heartIcon {
+	color: $heartcolor;
+}
+
+h2 {
+	color: $maincolor;
+	margin: 0;
+}
+
+h1 {
+	color: $maincolor;
+	margin: 0;
+	font-size: 25px;
+	font-weight: bold;
+}
+
+.thumbnail {
+	border-radius: 50%;
 }
