--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -31,6 +31,11 @@ input {
 	}
 }
 
+::-webkit-input-placeholder {
+	color: rgba($maincolor, 0.6);
+	font-size: 12px;
+}
+
 textarea {
 	border: none;
 	background: none;
@@ -73,4 +78,18 @@ h1 {
 
 .thumbnail {
 	border-radius: 50%;
+	object-fit: cover;
+}
+
+.formButton {
+	border: solid 1.5px $maincolor;
+	border-radius: 40px;
+	font-weight: bold;
+	color: $maincolor;
+
+	&:hover {
+		transition-duration: 0.3s;
+		background-color: $maincolor;
+		color: white;
+	}
 }
