--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -58,6 +58,7 @@ button {
 
 i {
 	color: $maincolor;
+	transition-duration: 0.3s;
 }
 
 .heartIcon {
@@ -86,10 +87,22 @@ h1 {
 	border-radius: 40px;
 	font-weight: bold;
 	color: $maincolor;
+	transition-duration: 0.3s;
 
 	&:hover {
 		transition-duration: 0.3s;
 		background-color: $maincolor;
 		color: white;
+
+		i {
+			color: white;
+			transition-duration: 0.3s;
+		}
 	}
+}
+
+.pageTitle {
+	margin: 0 auto;
+	text-align: center;
+	padding: 20px 0;
 }
